--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,6 +52,8 @@ services:
       - 6002:6002
     networks:
       - backend
+    links:
+      - shoppingcart
 
   shoppingcart:
     build: ./ShoppingCart
