--- a/Orderer/package.json
+++ b/Orderer/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http": "0.0.0",
     "pg": "^7.12.1",
     "redis": "^2.8.0",
     "typeorm": "^0.2.20"
